# recipe

./: .gitignore  README.md  TODO-LIST.md  main.spec  pyproject.toml  recipe_app.spec  recipes.db  tasks.py
recipe_app/: main.py
recipe_app/db/: __init__.py  models.py
recipe_app/services/: categories.py  recipes.py
recipe_app/ui/: grid.py  main_view.py  theme.py
recipe_app/ui/elements/: add_recipe.py  add_recipe_btn.py  add_recipe_form.py  build_catalogue_container.py  build_recipes_container.py  recipe_card.py
recipe_app/utils/: helper.py
